--- a/coeit-ssc.html
+++ b/coeit-ssc.html
@@ -73,7 +73,7 @@
   <main>
 	<section id="hero-page4" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Shared Services Center website research and redesign project.</h1>
+      <h1>Shared Services Center website research redesign</h1>
        </div>
 
       </div>
@@ -85,7 +85,7 @@
     			<p class="justified">
     				<h3><b>What's this about?</b></h3>
     				<p class=" justified paragraph">
-    					<b class="textbackground3"> The Shared Services Center </b> (<i>abbv: SSC </i>),  is a one stop shop that is involved in the finances and business aspects for the university of Maryland, Baltimore County. </b>
+    					<b class="textbackground3"> The Shared Services Center </b> (SSC),  is a one stop shop that is involved in the finances and business aspects for the University of Maryland, Baltimore County. </b>
 
               The Shared Services Center website suffered from decreased audience because of usability issues like difficulties in content discovery, search relavance, and structure related issues.
 
@@ -208,13 +208,13 @@
       <div class="image uppermargin">
 
         <figure>
-          <img src="assets/img/Personal/SSC Quick Guide.png" class="avatar9 uppermargin" alt="">
+          <img src="assets/img/Personal/SSC Quick Guide.png" class="avatar7 uppermargin" alt="">
             <figcaption  align="center"><i>A SSC subpage.</i></figcaption>
           </figure>
         </div>
       </div>
       <div class="col-md-6 justified">
-        <h5 class="textbackground3 uppermargin"><b>#1. VISIBILITY OF SYSTEM STATUS</b></h5>
+        <h5 class="textbackground3 uppermargin"><b>#1: VISIBILITY OF SYSTEM STATUS</b></h5>
         <p class="justified">
           Outdated Images may throw the user off guard and may be one of the main issues that increases the bounce rates.
         </p>
@@ -292,7 +292,7 @@
       </p>
         <p class="paragraph"><b class="textbackground3">Abbreviations: </b> All abbreviations to be expanded on the website for clarity.
         </p>
-        <p class="paragraph"><b class="textbackground3">Number of users: </b> Comparitively low for the month. < 100.
+        <p class="paragraph"><b class="textbackground3">Number of users: </b> Comparitively low for the month (< 100)
         </p>
 
     </ul>
