--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
             <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="">
 
-      <p class="paragraph3">As a <b class="textbackground2"> UX Researcher </b>, I come with an engineering background and a passion for interaction. I employ various research methods to help create <b class="textbackground2">accessible products</b>, thereby bringing customers and businesses closer to one another. </p>
+      <p class="paragraph3">As a <b class="textbackground2"> UX Researcher </b>, I come with an engineering background and a passion for interaction. I employ various research methods to help create <b class="textbackground2">accessible products,</b> thereby bringing customers and businesses closer to one another. </p>
 
-      <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div>
+      <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
     </div>
   </section><!-- End Hero -->
@@ -82,9 +82,9 @@
 <section class="containerblue" id="portfolio">
   <div class="container grid default-grid">
         <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>THE Trident - Obstacle detection device for visually impaired runners</strong></h1></div>
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
       <p class="paragraph2 justified uppermargin">
-        An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI Research and User-Centered Design.
+        An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI research and User-Centered Design.
       </p>
 
     <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button></div>
@@ -96,9 +96,9 @@
 <section class="uppermargin3">
   <div class="container grid default-grid">
         <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>Shared Services Center Website Redesign</strong></h1></div>
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>Shared Services Center website redesign</strong></h1></div>
       <p class="paragraph2 justified uppermargin">
-        The Shared Services Center Team found it difficult to attract users to their website. Hence, I redesigned the existing website from the insights and pain points uncovered from UX Research, integrating front-end web development.
+        The Shared Services Center team of the university found it difficult to attract users to their website. The main objective of the project was to improve the existing website from the insights and pain points uncovered from UX Research while integrating front-end web development.
       </p>
 
     <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
@@ -110,9 +110,9 @@
 <section class="containerblue">
   <div class="container grid default-grid">
         <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>COEIT Research Website Redesign</strong></h1></div>
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>COEIT research website redesign</strong></h1></div>
       <p class="paragraph2 justified uppermargin">
-        The goal of this project was to provide recommendations for the College of Engineering and Information Technology (COEIT) research website.  The website suffered from a lot of content-related issues and proved to be unusable by the users.
+        The goal of this project was to provide recommendations for the College of Engineering and Information Technology's (COEIT) research website.  The website suffered from a lot of content-related issues and proved to be unusable for the users.
       </p>
 
   <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
@@ -124,7 +124,7 @@
 <section class="uppermargin3">
   <div class="container grid default-grid">
         <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>B-AID : The Navigational Voice Application for people who are blind</strong></h1></div>
+    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>B-AID: The navigational voice Application for people who are blind</strong></h1></div>
       <p class="paragraph2 justified uppermargin">
         Globally, millions of people suffer from vision-related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid visually impaired individuals in their navigation.
       </p>
