--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -87,7 +87,7 @@
 	<section id="hero-page" class="d-flex flex-column justify-content-center">
 		<div class="container" data-aos="zoom-in" data-aos-delay="100">
 
-			<h1>Navigational Aid for runners who are blind - TRIDENT</h1>
+			<h1>TRIDENT - Navigational Aid for runners who are blind</h1>
 		</div>
 
 	</div>
@@ -106,7 +106,7 @@
 
 			<h3 class ="uppermargin"><strong>My Role in this longitudinal study</strong></h3>
 			<p class="justified paragraph">
-				Done in collaboration with <b class="textbackground3"> TOYOTA </b>,  this was a two-year project. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers, and a Faculty as the chief investigator.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the student team in research-related activities.</p>
+				This was a two-year project done in collaboration with <b class="textbackground3"> TOYOTA</b>. It included an overall team of 5 people, cutting across diversities, including Designers, HCI Researchers, and a Faculty as the chief investigator.<b class="textbackground3"> As the lead user researcher </b>, I successfully helped build the prototype to aid blind runners in leading the student team in research-related activities.</p>
 
 		<h3 class="uppermargin"><strong>Outcome of the project</strong></h3>
 		<p class="justified paragraph"> As a team, we prioritized user research and narrowed down on the type of device that can fit the users' needs.</p>
@@ -148,11 +148,11 @@
 </section>
 
 	<blockquote class="otro-blockquote">
-		And those are like, tactical buttons, so you can feel so push those. The start and stop buttons are tactile.
+		And those are like, tactical buttons, so when you can feel them, push them. The start and stop buttons are tactile.
 	</blockquote>
 
 <div class="container">
-	<h3 class ="uppermargin"><strong>Research Gap with respect to blind runners.</strong></h3>
+	<h3 class ="uppermargin"><strong>Research Gap with respect to blind runners</strong></h3>
 	<ul>
 		<li class="justified paragraph">While there is a lot of buzz in the market related to accessibility related products with respect to individuals who are blind, there is hardly any device that pops up when specific to running</span></li>
 		<li class="justified paragraph">There is not enough documented evidence to suggest that the existing research aids blind runners.</span></li>
@@ -198,7 +198,7 @@
 
 
 <section>
-	<h3 class="uppermargin project-title"><b>Phase #1 - Review and Analysis</b></h3>
+	<h1 class="uppermargin project-title"><b>Phase #1 - Review and Analysis</b></h1>
 	<div class="containerblue">
 		<h3 class="uppermargin3 color-x" align="center"><Strong>LITERATURE REVIEWS</Strong></h3>
 		<p class="justified countermargin" style="color:#000">
@@ -327,7 +327,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 <section>
 	<div class="container">
-		<h3 class="uppermargin project-title"><b>Phase #2 - Users</b></h3>
+		<h1 class="uppermargin project-title"><b>Phase #2 - Users</b></h1>
 
 	<p class="justified paragraph">	Having understood the competitive landscape, research projects, and the behavior of users while on the run, we were <b class="textbackground3">ready to profile the users, build empathy and solidify the information, help in ideating the design for the prototype</b> given the insights we had at our disposal. </p>
 
@@ -393,7 +393,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 				</div>
 
 				<section>
-					<h3 class="uppermargin project-title"><b>Phase #3 - Prototype Building</b></h3>
+					<h1 class="uppermargin project-title"><b>Phase #3 - Prototype Building</b></h1>
 						<p class="justified paragraph"> We were now at a stage where we could build the prototype. We chose three different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research, material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT. </b></p>
 							<div class ="row">
 								<div class="col-md-6">
