--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
         </div>
       </li> -->
       <li class="nav-item active">
-        <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span></a>
+        <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
       </li>
 	   <li class="nav-item active">
         <a class="nav-link nav-link1" href="assets\img\Personal\Anirudh_Nagraj Resume.pdf" target="_blank"> <span class="whitecolor">RESUME</span></a>
@@ -106,7 +106,7 @@
             <div class="row">
               <div class="col-md-6">
                 <p class="justified paragraph">When idle, books offer a place of solace. I love reading about mythology and modern history. I am always on the lookout for books written to view multiple perspectives on different subjects. </p>
-                  <p class="justified paragraph">Apart from that, I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time. My proudest moment while traveling came when I scaled a Himalayan peak, Kedarkantha (12,500 ft feet above sea level.)   </p>
+                  <p class="justified paragraph">Apart from that, I travel whenever possible because I love meeting new people, learning about different cultures, and being my best self, one day at a time. A highlight moment while traveling you may ask? I scaled a Himalayan peak the Kedarkantha (12,500 ft feet above sea level.)   </p>
               </div>
               <div class="col-md-4 offset-1">
                 <img src="assets/img/Personal/Main Image 3.png" class="avatar9" alt="">
