--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav m-auto justify-content-center">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span> <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span> <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="about.html"><span class="whitecolor">ABOUT ME</span></a>
@@ -66,11 +66,11 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
 
           <h2 align="center"><b>Hello there! 👋🏽 I am Anirudh.</b></h2>
-          <h3 style="color:#fff" align="center"><b>Welcome to my portfolio!</b></h3>
+          <!-- <h3 style="color:#000; font-family: Raleway, sans-serif !important;" align="center"><b>Welcome to my website!</b></h3>
+          -->
+            <img src="assets/img/Personal/Main Image 4.png" class="avatar6" alt="">
 
-            <img src="assets/img/Personal/Main Image 2.png" class="avatar6" alt="">
-
-      <p class="paragraph3">As a <b class="textbackground2"> UX Researcher </b>, I come with an engineering background and a passion for interaction. I employ various research methods to help create <b class="textbackground2">accessible products,</b> thereby bringing customers and businesses closer to one another. </p>
+      <p class="paragraph3" align="center">As a <b class="textbackground2"> UX Researcher</b>, I come with an engineering background and a deep rooted passion for inclusive design. I employ various research methods to help build <b class="textbackground2">impactful products,</b> thereby bringing customers and businesses closer to one another. </p>
 
       <!-- <div class="center"><button class="custom-btn1 btn-2" onclick="window.location.href='index.html#portfolio'" > VIEW PROJECTS </a></button> </div> -->
     </div>
@@ -79,62 +79,147 @@
 
   <main id="main">
 
-<section class="containerblue" id="portfolio">
-  <div class="container grid default-grid">
-        <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong> TriDeNT: Obstacle detection device for visually impaired runners</strong></h1></div>
-      <p class="paragraph2 justified uppermargin">
-        An industry-funded study to assess how blind users interact with technology while running. The end goal of the study was to develop a prototype that aids them in obstacle detection while on the run. Focus on HCI research and User-Centered Design.
-      </p>
+<section>
+  <div class="container">
 
-    <button class="custom-btn btn-1" onclick="window.location.href='navigational-aid.html'">READ MORE </a></button></div>
-
-      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/prototype_color.png" class="img-fluid uppermargin3" alt=""></div></div>
-      </div>
-</section>
-
-<section class="uppermargin3">
-  <div class="container grid default-grid">
-        <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>Shared Services Center website redesign</strong></h1></div>
-      <p class="paragraph2 justified uppermargin">
-        The Shared Services Center team of the university found it difficult to attract users to their website. The main objective of the project was to improve the existing website from the insights and pain points uncovered from UX Research while integrating front-end web development.
-      </p>
-
-    <button class="custom-btn btn-1" onclick="window.location.href='coeit-ssc.html'">READ MORE </a></button>
+    <h1 class="uppermargin paragraph4"> I've done a variety of projects.</h1>
+    <h1 class="uppermargin paragraph4"> Be it building products, providing recommendations, or getting into research to provide guidelines.
+</h1>
+<div class="center bottompadding"><button class="custom-btn btn-1" onclick="window.location.href='projects.html'"> VIEW PROJECTS </a></button>
   </div>
-      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/HA.png" class="avatar8 uppermargin3" alt=""></div></div>
-      </div>
+</div>
 </section>
 
 <section class="containerblue">
-  <div class="container grid default-grid">
-        <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md uppermargin3 bottompadding"><div class="inner"><h1 style="color:#004687"><strong>COEIT research website redesign</strong></h1></div>
-      <p class="paragraph2 justified uppermargin">
-        The goal of this project was to provide recommendations for the College of Engineering and Information Technology's (COEIT) research website.  The website suffered from a lot of content-related issues and proved to be unusable for the users.
-      </p>
+  <div class="container">
+  <div class="row example-centered">
+        <div class="col-md-12 example-title">
+            <h1 class="paragraph5"><strong>TIMELINE</strong></h1>
+          </div>
+          <div class="uppermargin">
 
-  <button class="custom-btn btn-1" onclick="window.location.href='coeit-research.html'"> READ MORE </a></button>
+            <ul class="timeline timeline-centered uppermargin">
+
+              <li class="timeline-item period">
+                  <div class="timeline-info"></div>
+                  <div class="timeline-content">
+                      <h2 class="paragraph6">2021</h2>
+                  </div>
+              </li>
+              <li class="timeline-item">
+                  <div class="timeline-info">
+                      <span>June</span>
+                  </div>
+                  <div class="timeline-marker"></div>
+                  <div class="timeline-content">
+                      <h3 class="timeline-title">Paper Acceptance</h3>
+                      <p>Our paper titled "Investigating the navigational habits of individuals who are blind in India" accepted at The 23rd International ACM SIGACCESS Conference on Computers and Accessibility (ASSETS 2021). Paper due to appear in October.</p>
+                  </div>
+              </li>
+
+                <li class="timeline-item">
+                    <div class="timeline-info">
+                        <span>June</span>
+                    </div>
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <h3 class="timeline-title">Thesis Defense</h3>
+                        <p>Successfully defended my thesis titled "Investigating the navigational habits of individuals who are blind in India."</p>
+                    </div>
+                </li>
+                <li class="timeline-item">
+                    <div class="timeline-info">
+                        <span>May</span>
+                    </div>
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content">
+                        <h3 class="timeline-title">Mobility for All</h3>
+                        <p>Collaborative project to develop a prototype for blind runners completed. Done under the supervision of Dr.Ravi Kuber and Dr.Stacy Brahnam. </p>
+                    </div>
+                </li>
+            </ul>
+
+
+
+                        <ul class="timeline timeline-centered uppermargin">
+
+                          <li class="timeline-item period">
+                              <div class="timeline-info"></div>
+                              <div class="timeline-content">
+                                  <h2 class="paragraph6">2020</h2>
+                              </div>
+                          </li>
+                          <li class="timeline-item">
+                              <div class="timeline-info">
+                                  <span>September</span>
+                              </div>
+                              <div class="timeline-marker"></div>
+                              <div class="timeline-content">
+                                  <h3 class="timeline-title">UX Researcher, Shared Services Center</h3>
+                                  <p>Became the lead UX Researcher and web developer for the Shared Services Center at the university.</p>
+                              </div>
+                          </li>
+
+                            <li class="timeline-item">
+                                <div class="timeline-info">
+                                    <span>March</span>
+                                </div>
+                                <div class="timeline-marker"></div>
+                                <div class="timeline-content">
+                                    <h3 class="timeline-title">Graduate Assistant</h3>
+                                    <p>Graduate Assistant, grading for the subject "Structured Systems Design and Analysis" at the University of Maryland.</p>
+                                </div>
+                            </li>
+                        </ul>
+
+                                    <ul class="timeline timeline-centered uppermargin">
+
+                                      <li class="timeline-item period">
+                                          <div class="timeline-info"></div>
+                                          <div class="timeline-content">
+                                              <h2 class="paragraph6">2019</h2>
+                                          </div>
+                                      </li>
+                                      <li class="timeline-item">
+                                          <div class="timeline-info">
+                                              <span>August</span>
+                                          </div>
+                                          <div class="timeline-marker"></div>
+                                          <div class="timeline-content">
+                                              <h3 class="timeline-title">Grad School</h3>
+                                              <p>Started studying Human-Centered Computing at the University of Maryland, Baltimore County.</p>
+                                          </div>
+                                      </li>
+
+
+                                    </ul>
+
+                                    <ul class="timeline timeline-centered uppermargin">
+
+                                      <li class="timeline-item period">
+                                          <div class="timeline-info"></div>
+                                          <div class="timeline-content">
+                                              <h2 class="paragraph6">2017-2019</h2>
+                                          </div>
+                                      </li>
+                                      <li class="timeline-item">
+                                          <div class="timeline-info">
+                                              <span>August 2017 - June 2019</span>
+                                          </div>
+                                          <div class="timeline-marker"></div>
+                                          <div class="timeline-content">
+                                              <h3 class="timeline-title">Software Engineer (UI/UX)</h3>
+                                              <p>Software Engineer working on front end web development. Experience with Adobe Experience Manager</p>
+                                          </div>
+                                      </li>
+
+                                    </ul>
+
+
+        </div>
+    </div>
 </div>
-      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/CR.png" class="avatar8 uppermargin3" alt=""></div></div>
-      </div>
 </section>
-
-<section class="uppermargin3">
-  <div class="container grid default-grid">
-        <div class="row row-xs-sm sample-row">
-    <div class="col-xs-6 col-sm-6 gutter-margin-xs-md bottompadding"><div class="inner"><h1 style="color:#004687" class=" uppermargin"><strong>B-AID: The navigational voice Application for people who are blind</strong></h1></div>
-      <p class="paragraph2 justified uppermargin">
-        Globally, millions of people suffer from vision-related issues. Challenges are faced while navigating from one place to another. This project revolves around creating a mobile application prototype to aid visually impaired individuals in their navigation.
-      </p>
-
-    <button class="custom-btn btn-1" onclick="window.location.href='mobileapp.html'"> READ MORE </a></button>
-  </div>
-      <div class="col-xs-6 col-sm-6 gutter-margin-xs-md"><div class="inner"><img src="assets/img/Personal/baid.png" class="avatar9 uppermargin3" alt=""></div></div>
-      </div>
-</section>
-
 
 </main><!-- End #main -->
 
