--- a/navigational-aid.html
+++ b/navigational-aid.html
@@ -59,7 +59,7 @@
 				<a class="nav-link" href="index.html"><span class="whitecolor">HOME</span> <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item active">
-				<a class="nav-link" href="index.html#portfolio"><span class="whitecolor">WORK</span></a>
+				<a class="nav-link" href="projects.html"><span class="whitecolor">WORK</span></a>
 			</li>
 			<!--<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="navcolor">
@@ -136,9 +136,9 @@
 
 
 <h3 class ="uppermargin"><strong>Challenges we faced along the way</strong></h3>
-<ul><li class="justified paragraph">  Study was challenging because of the dearth of existing literature about projects and devices used in this space. </li>
-<li class="justified paragraph"> Testing with real users was a problem given pandemic protocols.</li>
-<li class="justified paragraph"> As the user base was niche, recruitment of participants was a hard and long process.</li>
+<ul><li class="justified paragraph">  A dearth of existing literature about projects and devices used in this space. </li>
+<li class="justified paragraph"> Testing with real users - a problem given pandemic protocols.</li>
+<li class="justified paragraph"> Recruitment of participants was a hard and long process due to the nature of the target audience.</li>
 <li class="justified paragraph">
 	Asynchronous coordination during prototype building extended the time frame of development.
 </li>
@@ -148,7 +148,7 @@
 </section>
 
 	<blockquote class="otro-blockquote">
-		And those are like, tactical buttons, so when you can feel them, push them. The start and stop buttons are tactile.
+		And those are like, tactical buttons, so when you can feel them, push them.
 	</blockquote>
 
 <div class="container">
@@ -156,7 +156,7 @@
 	<ul>
 		<li class="justified paragraph">While there is a lot of buzz in the market related to accessibility related products with respect to individuals who are blind, there is hardly any device that pops up when specific to running</span></li>
 		<li class="justified paragraph">There is not enough documented evidence to suggest that the existing research aids blind runners.</span></li>
-		<li class="justified paragraph">Efficiency of many prototypes yet to be tested in real world environments.</span> </li>
+		<li class="justified paragraph">Efficiency of many prototypes yet to be tested in real-world setting.</span> </li>
 		<li class="justified paragraph">It is still unknown whether users would be able to connect and run the setup successfully should there be a reassembly or a first time assembly. </span></li>
 			<li class="justified paragraph">Ease of access and wear of the prototype among prospective users.</span></li>
 	</ul>
@@ -307,10 +307,10 @@
 
 		<div class="row uppermargin bottompadding">
 			<div class="col-md-4 offset-2">
-				<h4 class="color-x"><b>#3. Support of socialization while running.</b> </h4>
+				<h4 class="color-x"><b>#3. Support of socialization while running</b> </h4>
 			</div>
 			<div class="col-md-4 ">
-				<h4 class="color-x"><b>#4. Addressing uncertainty. </b> </h4>
+				<h4 class="color-x"><b>#4. Addressing uncertainty </b> </h4>
 			</div>
 		</div>
 
@@ -394,7 +394,7 @@ It depends on how well you know the trail. I’ve gotten to the point where they
 
 				<section>
 					<h1 class="uppermargin project-title"><b>Phase #3 - Prototype Building</b></h1>
-						<p class="justified paragraph"> We were now at a stage where we could build the prototype. We chose three different sensors (Infrared, Ultrasonic, and LIDAR) to incorporate into the device, and from the research, material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT. </b></p>
+						<p class="justified paragraph"> Three different sensors (Infrared, Ultrasonic, and LIDAR)  were chosen to be incorporated into the device, and from the research, material gathered,<b class="textbackground3"> we decided to go with a RUNNING BELT. </b></p>
 							<div class ="row">
 								<div class="col-md-6">
 										<p class="justified paragraph">
